added directory since it wasn't building in the main folderr on new machine

--- a/res/Twenty-Seconds_cv.tex
+++ b/res/Twenty-Seconds_cv.tex
@@ -10,7 +10,7 @@
 %%PERSONAL INFO%%%
 %%%%%%%%%%%%%%%%
 
-\profilepic{taq.jpg} %path of profile pic
+\profilepic{taqcrop.jpg} %path of profile pic
 \cvname{Michael} %your name
 \cvjobtitle{Backend Software Developer}%your actual job position
 \cvdate{12 December 1987}%date of birth
@@ -20,6 +20,8 @@
 
 
 \aboutme{Michael is basically a husky puppy that was trapped in a human's body and forced to write software. He enjoys climbing, running trails then napping,  howling with his guitar, and anything else he can do outdoors. He's been coding for about five years now, but he's been exploring since the day he could walk -- perhaps even earlier. 
+
+He views Elixir as ``the one that got away'' and would do anything for a second chance to show her how much he cares.
 	} %About me
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -30,7 +32,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%Skill text section, each skill must have a value between 0 an 6%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\skillstext{{Teamplayer/6},{Easygoing/4.78}}
+%% \skillstext{{Teamplayer/6},{Easygoing/4.78}}
 
 \makeprofile
 %%%%%%%%%%%%%%%%%%%%
@@ -115,11 +117,11 @@ Software = Poetry + Math
     {Fluxergy, LLC}
     {- Designed clinical test data system with real-time data-uploading and retrieval via Azure Webapp Services and Docker Containers.
 	
-	- Responsible for requirements gathering, spec-writing, v1 development and documentation of department agnostic, scalable shop-floor-control system.
+	- Responsible for requirements gathering, spec-writing, development and documentation of department agnostic shop-floor-control system.
 	
 	- Refactored computer vision analysis pipelines for improved algorithm performance, increased modularity, and to allow for proper testability.
 	
-	- Delivered real-time data visualizations via PowerBI and Elasticsearch/Kibana.}
+}
   \twentyitem
     {2017 - 2018}
     {Software Engineer}
@@ -139,14 +141,10 @@ Software = Poetry + Math
 	{Python, Django, Flask, PHP, MySQL, Docker, LaTex, docker-compose, Git, Cloud resources (Azure and AWS), Database desgin, Elasticsearch and Kibana, PowerBI, Javascript/HTML/CSS}
 	\twentyitemshort
 	{2010-2020}
-	{Program evaluation, testing, requirements gathering, software design, technical liaison, public speaking, presentation, small talk, interviewing}
-	\twentyitemshort
-	{2020}
-	{Documentation in  professional , yet entertaining tone to ensure that readers were minimally bored, maximally informed, and where possible, entertained. Experience with QMS documentation and compliance.}
+	{Program evaluation, testing, requirements gathering, software design, technical liaison, public speaking, presentation, interviewing}
 	\end{twentyshort}
 \section{other information}
 Michael used to work in construction and property management. He's found some odd overlap between his previous career and his current one, mostly in visualizing interdepent systems and the value of elbow grease (not to mention the horror of opening up someone else's beloved home to find that the whole thing is tied together with (more or less) strings). He'd love to find a home where he can continue to grow and be challenged by exciting new projects on a regular basis.
-He views Elixir as ``the one that got away'' and would do anything for a second chance to show her how much he cares.
 
 %%%%%%%%%%%%%%%%%%%%
 %%%%%ENDBODY%%%%%%%%
