update pic and content

--- a/res/Twenty-Seconds_cv.tex
+++ b/res/Twenty-Seconds_cv.tex
@@ -19,18 +19,16 @@
 \cvmail{michaelhorvath87@gmail.com}%e-mail
 
 
-\aboutme{Michael is basically a husky puppy that was trapped in a human's body and forced to write software. He enjoys climbing, running trails then napping,  howling with his guitar, and anything else he can do outdoors. He's been coding for about five years now, but he's been exploring since the day he could walk -- perhaps even earlier. 
-
-He views Elixir as ``the one that got away'' and would do anything for a second chance to show her how much he cares.
+\aboutme{Originally from Kansas, Michael has lived in eight states and two countries. Michael enjoys climbing, running trails then napping,  howling with his guitar, and anything else he can do outdoors. He's been coding for about five years now, but he's been exploring since the day he could walk -- perhaps even earlier. 
 	} %About me
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%Skill bar section, each skill must have a value between 0 an 6 (float)%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\skills{{Python/4},{Whiteboarding/100},{VIM/4},{Linux/4},{Figuring it out/4.77}, {CSS/-0.31}}
+\skills{{Python/4},{VIM/4},{Whiteboarding/5},{Unix/3.5},{Figuring it out/4.57}, {Stats/3.5}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%Skill text section, each skill must have a value between 0 an 6%%%%%%%%%%%%
+%%%%%%Skill text section, each skill must have a value between 0 an 5%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% \skillstext{{Teamplayer/6},{Easygoing/4.78}}
 
@@ -115,11 +113,15 @@ Software = Poetry + Math
     {2018 - Now}
     {Software Engineer}
     {Fluxergy, LLC}
-    {- Designed clinical test data system with real-time data-uploading and retrieval via Azure Webapp Services and Docker Containers.
+    {- Cloud-based automatic upload, processing, and report generation of clinical test output.	(Django and MySQL).
+
+	- Platform for creation, tracking, and real-tim display of manufacturing floor processes. (Flask and PostGRES).
 	
-	- Responsible for requirements gathering, spec-writing, development and documentation of department agnostic shop-floor-control system.
-	
-	- Refactored computer vision analysis pipelines for improved algorithm performance, increased modularity, and to allow for proper testability.
+	- Implemented R\&D computer vision solutions to ISO 13485 standards. (Python, c++, NumPy, openCV).
+
+	- Real-time monitoring and processing of time-series data and production metrics. (PowerBI, ELK).
+
+	- Study planning and execution to pass ISO 13485 regression validation requirements.
 	
 }
   \twentyitem
@@ -131,17 +133,19 @@ Software = Poetry + Math
     {2016 - 2017}
     {Personal Project}
     {Elixir/Machine Learning}
-    {Built a neural net constructor in Elixir, in order to better understand the fundamentals of machine. Followed Gene Sher's ``Handbook of Neuroevolution Through Erlang'' and translated each project to Elixir.} 
+    {Built a neural net constructor in Elixir, in order to better understand the fundamentals of machine learning. 
+
+} 
 \end{twenty}
 
 \section{skills}
 	\begin{twentyshort}
 	\twentyitemshort
 	{2018-2020}
-	{Python, Django, Flask, PHP, MySQL, Docker, LaTex, docker-compose, Git, Cloud resources (Azure and AWS), Database desgin, Elasticsearch and Kibana, PowerBI, Javascript/HTML/CSS}
+	{Python, Django, Flask, PHP, MySQL, PostGRES, Docker, LaTex, docker-compose, Git, Cloud resources (Azure and AWS), Database design, Elasticsearch/Kibana, PowerBI, c++, TensorFlow, R, LISREL}
 	\twentyitemshort
 	{2010-2020}
-	{Program evaluation, testing, requirements gathering, software design, technical liaison, public speaking, presentation, interviewing}
+	{Program evaluation, technical liaison, public speaking, regression analysis, ANOVA, MANOVA, optimization, structural equation modeling, business intelligence}
 	\end{twentyshort}
 \section{other information}
 Michael used to work in construction and property management. He's found some odd overlap between his previous career and his current one, mostly in visualizing interdepent systems and the value of elbow grease (not to mention the horror of opening up someone else's beloved home to find that the whole thing is tied together with (more or less) strings). He'd love to find a home where he can continue to grow and be challenged by exciting new projects on a regular basis.
