--- a/res/Twenty-Seconds_cv.tex
+++ b/res/Twenty-Seconds_cv.tex
@@ -10,7 +10,7 @@
 %%PERSONAL INFO%%%
 %%%%%%%%%%%%%%%%
 
-\profilepic{taqcrop.jpg} %path of profile pic
+\profilepic{hike.jpg} %path of profile pic
 \cvname{Michael} %your name
 \cvjobtitle{Backend Software Developer}%your actual job position
 \cvdate{12 December 1987}%date of birth
@@ -19,15 +19,14 @@
 \cvmail{michaelhorvath87@gmail.com}%e-mail
 
 
-\aboutme{Michael is basically a husky puppy that was trapped in a human's body and forced to write software. He enjoys climbing, running trails then napping,  howling with his guitar, and anything else he can do outdoors. He's been coding for about five years now, but he's been exploring since the day he could walk -- perhaps even earlier. 
+\aboutme{Originally from Kansas, Michael has lived in eight states and two countries. Michael enjoys climbing, running, playing guitar and anything that gets him outside. He's been writing software for about seven years now, but he's been exploring since the day he could walk -- perhaps even earlier. Michael is looking for remote opportunities that allow him to continue travelling. 
 
-He views Elixir as ``the one that got away'' and would do anything for a second chance to show her how much he cares.
 	} %About me
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%Skill bar section, each skill must have a value between 0 an 6 (float)%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\skills{{Python/4},{Whiteboarding/100},{VIM/4},{Linux/4},{Figuring it out/4.77}, {CSS/-0.31}}
+\skills{{Python/4},{CSS/-0.31},{VIM/4},{Linux/4},{Whiteboarding/4.77}, {Figuring it out/100}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%Skill text section, each skill must have a value between 0 an 6%%%%%%%%%%%%
@@ -82,19 +81,7 @@ Software = Poetry + Math
 
 \begin{twentyshort}
   \twentyitemshort
-    {1997}
-    {Math Olympics State Champion, Pennsylvania Assoc. of Private Schools}
-  \twentyitemshort
-    {1998}
-    {Math Olympics State Champion, Pennsylvania Assoc. of Private Schools}
-  \twentyitemshort
-    {1999}
-    {Math Olympics State Champion, Pennsylvania Assoc. of Private Schools}
-  \twentyitemshort
-    {2000}
-    {Math Olympics State Champion, Pennsylvania Assoc. of Private Schools}
-  \twentyitemshort
-    {2001}
+    {1997-2001}
     {Math Olympics State Champion, Pennsylvania Assoc. of Private Schools}
   \twentyitemshort
     {2005}
@@ -112,39 +99,65 @@ Software = Poetry + Math
 
 \begin{twenty}
   \twentyitem
-    {2018 - Now}
+    {February 2022}
     {Software Engineer}
-    {Fluxergy, LLC}
-    {- Designed clinical test data system with real-time data-uploading and retrieval via Azure Webapp Services and Docker Containers.
-	
-	- Responsible for requirements gathering, spec-writing, development and documentation of department agnostic shop-floor-control system.
-	
-	- Refactored computer vision analysis pipelines for improved algorithm performance, increased modularity, and to allow for proper testability.
+    {Maxar Technologies}
+    {- Back-end development in Sanic micro-service architecture system. Refactoring for modularity and readability.
+
+        - Functional and unit testing.
 	
 }
+
+  \twentyitem
+    {2021 - 2022}
+    {Lead Data Scientist}
+    {Fluxergy}
+    {- Design, development, testing and release of real-time quantitative diagnostic algorithms for PCR and lateral flow tests.
+
+	- Study design, program evaluation, and data sampling.
+	} 
+  \twentyitem
+    {2020 - 2021}
+    {Algorithms Engineer}
+    {Fluxergy}
+    {- Redesigned primary image-based PCR analysis algorithm, through all phases of QMS software development lifecycle.
+
+	- Designed, connected, and commodified business intelligence pipelines across departments. Created real-time interactive dashboards and BI reports.
+	} 
+  \twentyitem
+    {2018 - 2020}
+    {Software Engineer}
+    {Fluxergy}
+    {- Designed, developed, and maintained data-centric internal applications, run in docker-ized cloud environments.
+
+	- Custom report generation for automatic recurring, user-built reports, with plugins for BI integration.
+	} 
   \twentyitem
     {2017 - 2018}
     {Software Engineer}
-    {Embrace Healthwear, LLC}
-    {Developed activity classification models with biometric data to map physical therapy research to procedural findings.} 
+    {Embrace Healthwear}
+    {Data preprocessing, pipelining and analysis of motion-sensor high-frequency time-series data.
+	} 
   \twentyitem
-    {2016 - 2017}
-    {Personal Project}
-    {Elixir/Machine Learning}
-    {Built a neural net constructor in Elixir, in order to better understand the fundamentals of machine. Followed Gene Sher's ``Handbook of Neuroevolution Through Erlang'' and translated each project to Elixir.} 
+    {2015 - 2022}
+    {Personal Projects}
+    {}
+    {- Neural net generator for exploring node generation, tuning and lifecycle of basic machine learning processes in Elixir.
+
+     - 
+
+	- High frequency trading algorithm development and back-testing.} 
 \end{twenty}
 
 \section{skills}
 	\begin{twentyshort}
 	\twentyitemshort
-	{2018-2020}
-	{Python, Django, Flask, PHP, MySQL, Docker, LaTex, docker-compose, Git, Cloud resources (Azure and AWS), Database desgin, Elasticsearch and Kibana, PowerBI, Javascript/HTML/CSS}
+	{2018-2022}
+	{Python, Django, Flask, Sanic, PHP, MySQL, Docker, LaTex, docker-compose, Git, Cloud resources (Azure and AWS), Database desgin, Elasticsearch and Kibana, PowerBI, Javascript/HTML/CSS, CI/CD, Infrastructure as code}
 	\twentyitemshort
 	{2010-2020}
-	{Program evaluation, testing, requirements gathering, software design, technical liaison, public speaking, presentation, interviewing}
+	{Program evaluation, technical liaison, public speaking, regression analysis, ANOVA, MANOVA, optimization, structural equation modeling, business intelligence.}
 	\end{twentyshort}
-\section{other information}
-Michael used to work in construction and property management. He's found some odd overlap between his previous career and his current one, mostly in visualizing interdepent systems and the value of elbow grease (not to mention the horror of opening up someone else's beloved home to find that the whole thing is tied together with (more or less) strings). He'd love to find a home where he can continue to grow and be challenged by exciting new projects on a regular basis.
 
 %%%%%%%%%%%%%%%%%%%%
 %%%%%ENDBODY%%%%%%%%
