--- a/res/Twenty-Seconds_cv.tex
+++ b/res/Twenty-Seconds_cv.tex
@@ -11,22 +11,22 @@
 %%%%%%%%%%%%%%%%
 
 \profilepic{hike.jpg} %path of profile pic
-\cvname{Michael Horvath} %your name
+\cvname{Michael} %your name
 \cvjobtitle{Backend Software Developer}%your actual job position
 \cvdate{12 December 1987}%date of birth
 \cvaddress{California}%address
-\cvnumberphone{949-409-5713}%telphone number
+\cvnumberphone{949-228-0695}%telphone number
 \cvmail{michaelhorvath87@gmail.com}%e-mail
 
 
-\aboutme{Originally from Kansas, Michael has lived in eight states and two countries. Michael enjoys climbing, running, playing guitar and anything that gets him outside. He's been writing software for about seven years now, but he's been exploring since the day he could walk -- perhaps even earlier.
+\aboutme{Originally from Kansas, Michael has lived in eight states and two countries. Michael enjoys climbing, running, playing guitar and anything that gets him outside. He's been writing software for about seven years now, but he's been exploring since the day he could walk -- perhaps even earlier. Michael is looking for remote opportunities that allow him to continue travelling. 
 
 	} %About me
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%Skill bar section, each skill must have a value between 0 an 6 (float)%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\skills{{Python/4.5},{CSS/-0.31},{VIM/4},{Linux/4},{Data Analysis/4}, {Figuring it out/100}}
+\skills{{Python/4},{CSS/-0.31},{VIM/4},{Linux/4},{Whiteboarding/4.77}, {Figuring it out/100}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%Skill text section, each skill must have a value between 0 an 5%%%%%%%%%%%%
@@ -102,9 +102,9 @@ Software = Poetry + Math
     {February 2022}
     {Software Engineer}
     {Maxar Technologies}
-    {- Back-end development in Sanic micro-service architecture system. 
+    {- Back-end development in Sanic micro-service architecture system. Refactoring for modularity and readability.
 
-        - Functional and unit testing in CI/CD system.
+        - Functional and unit testing.
 	
 }
 
@@ -114,9 +114,7 @@ Software = Poetry + Math
     {Fluxergy}
     {- Design, development, testing and release of real-time quantitative diagnostic algorithms for PCR and lateral flow tests.
 
-	- Study design, program evaluation, data sampling, and data analysis for validation of human medical device algorithms.
-
-	- Designed, connected, and commodified business intelligence pipelines across departments.
+	- Study design, program evaluation, and data sampling.
 	} 
   \twentyitem
     {2020 - 2021}
@@ -124,6 +122,7 @@ Software = Poetry + Math
     {Fluxergy}
     {- Redesigned primary image-based PCR analysis algorithm, through all phases of QMS software development lifecycle.
 
+	- Designed, connected, and commodified business intelligence pipelines across departments. Created real-time interactive dashboards and BI reports.
 	} 
   \twentyitem
     {2018 - 2020}
@@ -131,7 +130,7 @@ Software = Poetry + Math
     {Fluxergy}
     {- Designed, developed, and maintained data-centric internal applications, run in docker-ized cloud environments.
 
-	- Managed entire softwared development lifecycle for internet-of-things (IOT) manufacturing shop floor system.
+	- Custom report generation for automatic recurring, user-built reports, with plugins for BI integration.
 	} 
   \twentyitem
     {2017 - 2018}
@@ -144,6 +143,8 @@ Software = Poetry + Math
     {Personal Projects}
     {}
     {- Neural net generator for exploring node generation, tuning and lifecycle of basic machine learning processes in Elixir.
+
+     - 
 
 	- High frequency trading algorithm development and back-testing.} 
 \end{twenty}
