--- a/res/DataEngineer.tex
+++ b/res/DataEngineer.tex
@@ -12,7 +12,7 @@
 
 \profilepic{hike.jpg} %path of profile pic
 \cvname{Michael Horvath} %your name
-\cvjobtitle{Machine Learning Engineer}%your actual job position
+\cvjobtitle{Data Engineer}%your actual job position
 \cvdate{12 December 1987}%date of birth
 \cvaddress{California}%address
 \cvnumberphone{949-409-5713}%telphone number
@@ -27,13 +27,14 @@
 %%%%%%Skill bar section, each skill must have a value between 0 an 6 (float)%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \skills{{Linux/4},
-{Productionizing/5},
+{Database-Design/5},
 {Python/5.5},
-{Data-Modeling/5.5},
+{Pipelining/5.5},
 {Figuring-it-out/100},
-{TensorFlow/4},
-{Data-Mining/5},
-{Computer-Vision/4.5},
+{Scalability/4.5},
+{CSS/1},
+{ORM/5},
+{Big-Data/4},
 {Design-and-Architecture/4.5},
 {ETL/5.5}}
 
@@ -105,6 +106,9 @@ Software = Poetry + Math
     {Backend Engineer}
     {Maxar Technologies}
     {- Microservices development in enterprise level asynchronous GIS system. 
+
+	- Unit, functional, integration, and regression testing.
+
 }
 
   \twentyitem
@@ -113,7 +117,7 @@ Software = Poetry + Math
     {Fluxergy}
     {- Led data and algorithms team in development of new algorithms and data services across numerous departments.
 
-	- Designed, connected, and commodified business intelligence pipelines.
+	- Designed, connected, and commodified business intelligence pipelines across departments.
 
 	- Study design and program evaluation.
 	} 
@@ -123,14 +127,14 @@ Software = Poetry + Math
     {Fluxergy}
     {- Developed triphasic image-based PCR analysis algorithm, through all phases of QMS software development lifecycle.
 
-    - Data pipelining, feature selection, computational benchmarking, labeling and segmenting.
-
 	} 
   \twentyitem
     {2018}
     {Backend Engineer}
     {Fluxergy}
     {- Designed, developed, and maintained data-centric internal applications.
+
+	- Requirements gathering, technical writing.
 	} 
   \twentyitem
     {2017}
@@ -144,7 +148,7 @@ Software = Poetry + Math
     {Benchmark Construction}
     {- Commercial construction and remodeling, residential remodeling.
 
-	- Framing, drywalling, plumbing, electric, flooring.
+	- Rough carpentry, finish carpentry, drywalling, basic plumbing, basic electric, tiling, flooring.
 	} 
   \twentyitem
     {2015 - 2022}
@@ -152,17 +156,16 @@ Software = Poetry + Math
     {}
     {- Neural net generator for exploring automated generation, tuning and lifecycle of machine learning models in Elixir.
 
+    - 
+
 	- High frequency trading algorithm development and back-testing.} 
 \end{twenty}
 
 \section{skills}
 	\begin{twentyshort}
 	\twentyitemshort
-	{Programming}
-	{Python, Django, Flask, Sanic, PHP, MySQL, Docker, LaTex, docker-compose, Git, Cloud , Javascript/HTML/CSS, CI/CD, Infrastructure as code, Google, Microsoft Office, Excel, Typescript, Pandas, Numpy, SciPy, Docker, Azure, AWS, Lambda functions, SAAS, Microservices,  Streaming, Pub/Sub, Internet-of-things (IoT), Testing, TDD, AI}
-	\twentyitemshort
-	{Stats/ML}
-	{R, Database desgin, Elasticsearch and Kibana, PowerBI, Statistics, Structural Equation Modeling, ANOVA, MANOVA, Regression, Multiple Regression, Machine Learning, Deep Learning, PyTorch, SVM, Decision Trees, Anomoly Detection, NLP, Optimization, Power Analysis}
+	{Technical}
+	{Python, Django, Flask, Sanic, PHP, MySQL, Docker, LaTex, docker-compose, Git, Cloud , Database desgin, Elasticsearch and Kibana, PowerBI, Javascript/HTML/CSS, CI/CD, Infrastructure as code, Google, Microsoft Office, Excel, Typescript, Statistics, Structural Equation Modeling, ANOVA, MANOVA, Regression, Multiple Regression, Machine Learning, Deep Learning, PyTorch, Pandas, Numpy, SciPy, SVM, Decision Trees, Docker, Azure, AWS, Lambda functions, SAAS, Microservices, Anomoly Detection, Streaming, Pub/Sub, Internet-of-things (IoT)}
 	\twentyitemshort
 	{General}
 	{Program evaluation, technical liaison, presentation and public speaking, business intelligence, requirements gathering, data visualization, data wrangling, project management, Kanban, Jira, DevOps.}
