--- a/res/DataEngineer.tex
+++ b/res/DataEngineer.tex
@@ -13,10 +13,9 @@
 \profilepic{hike.jpg} %path of profile pic
 \cvname{Michael Horvath} %your name
 \cvjobtitle{Data Engineer}%your actual job position
-\cvdate{12 December 1987}%date of birth
-\cvaddress{California}%address
+\cvaddress{michaelhorvath87@gmail.com}%address
 \cvnumberphone{949-409-5713}%telphone number
-\cvmail{michaelhorvath87@gmail.com}%e-mail
+\cvmail{www.michaelhorvathdataguy.com}%e-mail
 
 
 \aboutme{Originally from Kansas, Michael has lived in eight states and two countries. Michael enjoys climbing, running, playing guitar and anything that gets him outside. He's been writing software for about seven years now, but he's been exploring since the day he could walk -- perhaps even earlier.
