--- a/res/DataScience.tex
+++ b/res/DataScience.tex
@@ -12,7 +12,7 @@
 
 \profilepic{hike.jpg} %path of profile pic
 \cvname{Michael Horvath} %your name
-\cvjobtitle{Back End Developer}%your actual job position
+\cvjobtitle{Data Scientist}%your actual job position
 \cvaddress{michaelhorvath87@gmail.com}%address
 \cvnumberphone{949-409-5713}%telphone number
 \cvmail{www.michaelhorvathdataguy.com}%e-mail
@@ -25,22 +25,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%Skill bar section, each skill must have a value between 0 an 6 (float)%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\skills{{Linux/4},
-{APIs/4.5},
-{Python/5.5},
-{Flask/4.5},
-{Figuring-it-out/100},
-{Scalability/4.5},
-{CSS/1},
-{ORM/5},
-{Databases/4},
-{Design-and-Architecture/4.5},
-{YAGNI/5.5}}
+\skills{{Python/5},{Business Intelligence/5.2},{VIM/5},{Linux/4.7},{Data Analysis/6},{Productionizing Models/4.5},{Figuring It Out/100}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%Skill text section, each skill must have a value between 0 an 5%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% \skillstext{{Teamplayer/6},{Easygoing/4.78}}
+\skillstext{{Teamplayer/6},{Easygoing/4.78}}
 
 \makeprofile
 %%%%%%%%%%%%%%%%%%%%
@@ -54,8 +44,8 @@
 %%%%%%%%%%%%%%%%%%%%
 %%SIMPLE SECTION%%%%%%
 %%%%%%%%%%%%%%%%%%%%
-\section{motto}
-Continual growth is key to enjoyment of life; challenge begets growth.
+\section{beliefs}
+Passion is a must.
 
 Software = Poetry + Math
 
@@ -71,6 +61,11 @@ Software = Poetry + Math
     {B.A. cum laude}
     {University of Kansas}
     {Statistics and Research Methods}
+  \twentyitem
+    {2002-2006}
+    {High school, 4.0 GPA}
+    {Shawnee Mission East HS}
+    {Extras: Diving, Soccer, Choir, Science Olympics}
 \end{twenty}
 
 
@@ -84,7 +79,7 @@ Software = Poetry + Math
 \begin{twentyshort}
   \twentyitemshort
     {1997-2001}
-	{Five Time Math Olympics State Champion, Pennsylvania}
+    {Math Olympics State Champion, Pennsylvania Assoc. of Private Schools}
   \twentyitemshort
     {2005}
     {Science Olympiad State Champion, Chemistry}
@@ -97,77 +92,69 @@ Software = Poetry + Math
 \end{twentyshort}
 
 
-\section{work history}
+\section{experience}
 
 \begin{twenty}
   \twentyitem
-    {2022}
-    {Backend Engineer}
+    {2022 - 2023}
+    {Software Engineer}
     {Maxar Technologies}
-    {- Microservices development in enterprise level asynchronous GIS system. 
-
-	- Unit, functional, integration, and regression testing.
-
+    {- Back-end development in Sanic micro-service architecture system. 
 }
 
   \twentyitem
-    {2021}
+    {2021 - 2022}
     {Lead Data Scientist}
     {Fluxergy}
-    {- Led data and algorithms team in development of new algorithms and data services across numerous departments.
+    {- Head of data and algorithms department.
 
-	- Designed, connected, and commodified business intelligence pipelines across departments.
+	- Study design, program evaluation, data sampling, and data analysis.
 
-	- Study design and program evaluation.
+	- Collaborated cross-departmentally to design, connect, and commodify business intelligence pipelines.
+
+	- Oversaw algorithm development and increased accessibility of data for decision making, via KPI dashboards and PowerBI reports.
 	} 
   \twentyitem
-    {2020}
-    {Data and Algorithms Engineer}
+    {2020 - 2021}
+    {Algorithms Engineer}
     {Fluxergy}
-    {- Developed triphasic image-based PCR analysis algorithm, through all phases of QMS software development lifecycle.
+    {- Developed primary image-based PCR analysis algorithm from prototype to ISO certificied embedded product.
+
+	- Deploy classification algorithms and optimize for wide array of inputs.
 
 	} 
   \twentyitem
-    {2018}
-    {Backend Engineer}
+    {2018 - 2020}
+    {Software Engineer}
     {Fluxergy}
     {- Designed, developed, and maintained data-centric internal applications.
 
-	- Requirements gathering, technical writing.
+	- Work across departments to gather requirements and build out specifactions for first three versions of company-wide data infrastructure.
 	} 
   \twentyitem
-    {2017}
+    {2017 - 2018}
     {Machine Learning Engineer}
     {Embrace Healthwear}
-    {- Developed machine learning algorithm to recognize gait anomolies and predict accidents in geriatric patients.
-	} 
-  \twentyitem
-    {2012}
-    {Carpenter}
-    {Benchmark Construction}
-    {- Commercial construction and remodeling, residential remodeling.
+    {- Model selection, data preprocessing and vectorization for machine learning classification of high-frequency time-series data.
 
-	- Rough carpentry, finish carpentry, drywalling, basic plumbing, basic electric, tiling, flooring.
 	} 
   \twentyitem
     {2015 - 2022}
     {Personal Projects}
     {}
-    {- Neural net generator for exploring automated generation, tuning and lifecycle of machine learning models in Elixir.
+    {- Neural net generator for exploring node generation, tuning and lifecycle of basic machine learning processes in Elixir.
 
-    - 
-
-	- High frequency trading algorithm development and back-testing.} 
+	- Machine learning-based high frequency trading bot.} 
 \end{twenty}
 
-\section{skills}
+\section{tools}
 	\begin{twentyshort}
 	\twentyitemshort
-	{Technical}
-	{Python, Django, Flask, Sanic, PHP, MySQL, Docker, LaTex, docker-compose, Git, Cloud , Database desgin, Elasticsearch and Kibana, PowerBI, Javascript/HTML/CSS, CI/CD, Infrastructure as code, Google, Microsoft Office, Excel, Typescript, Statistics, Structural Equation Modeling, ANOVA, MANOVA, Regression, Multiple Regression, Machine Learning, Deep Learning, PyTorch, Pandas, Numpy, SciPy, SVM, Decision Trees, Docker, Azure, AWS, Lambda functions, SAAS, Microservices, Anomoly Detection}
+	{2017-2023}
+	{Python, Scikit-Learn, SciPy, Pandas, Numpy, TensorFlow, Matplotlib, MySQL, Docker, docker-compose, Git, Cloud resources (Azure and AWS), database design, datalake, scaling and paralelization, Elasticsearch and Kibana, PowerBI, CI/CD, machine learning, support vector machines, k-nearest neighbors, natural language processing, computer vision, lambda functions}
 	\twentyitemshort
-	{General}
-	{Program evaluation, technical liaison, presentation and public speaking, business intelligence, requirements gathering, data visualization, data wrangling, project management, Kanban, Jira, DevOps.}
+	{2010-2020}
+	{Program evaluation, technical liaison, public speaking, regression analysis, ANOVA, MANOVA, optimization, structural equation modeling, business intelligence}
 	\end{twentyshort}
 
 %%%%%%%%%%%%%%%%%%%%
