cleanup and add 7r

--- a/res/HorvathResume.tex
+++ b/res/HorvathResume.tex
@@ -24,15 +24,15 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%Skill bar section, each skill must have a value between 0 an 6 (float)%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\skills{{Linux/4},
-{APIs/4.5},
+\skills{{Linux/5},
 {Python/5.5},
-{Flask/4.5},
-{Scalability/4.5},
+{Scalability/5.0},
+{Cloud Services (GCP, AWS, Azure) /4},
+{SQL/5},
+{Design-and-Architecture/5.0}, 
 {Figuring-it-out/100},
-{SRE/5},
-{Cloud Services (AWS, Azure) /4},
-{Design-and-Architecture/4.5}}
+{CSS-Javascript-HTML/0},
+{0-to-1 Product Development/5.0}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%Skill text section, each skill must have a value between 0 an 5%%%%%%%%%%%%
@@ -98,6 +98,13 @@ Software = Poetry + Math
 
 \begin{twenty}
   \twentyitem
+    {2023}
+    {Senior Software Engineer}
+    {SevenRooms}
+    {- BigQuery database design with an eye for managing compute cost, realtime streaming services, and query optimization for internal and external clients.
+
+}
+  \twentyitem
     {2022}
     {Software Engineer}
     {Maxar Technologies}
@@ -150,6 +157,8 @@ Software = Poetry + Math
     {}
     {- Neural net generator for exploring automated generation, tuning and lifecycle of machine learning models in Elixir.
 
+	- 
+
 	- High frequency trading algorithm development and back-testing.} 
 \end{twenty}
 
@@ -157,7 +166,7 @@ Software = Poetry + Math
 	\begin{twentyshort}
 	\twentyitemshort
 	{Technical}
-	{Python, Django, Flask, Sanic, PHP, MySQL, Docker, LaTex, docker-compose, Git, C++, make, CLion, Database design, Elasticsearch and Kibana, PowerBI, Javascript/HTML/CSS, CI/CD, Infrastructure as code, Google, Microsoft Office, Excel, Typescript, Statistics, Structural Equation Modeling, ANOVA, MANOVA, Regression, Multiple Regression, Machine Learning, Deep Learning, PyTorch, Pandas, Numpy, SciPy, SVM, Decision Trees, Docker, Azure, AWS, Lambda functions, SAAS, Microservices, Anomoly Detection}
+	{Python, Flask, Sanic, BigQuery, MySQL, Docker, LaTex, docker-compose, Git, Database design, Elasticsearch and Kibana, Looker, PowerBI, CI/CD, Infrastructure as code, Google, Microsoft Office, Excel, Statistics, Structural Equation Modeling, ANOVA, MANOVA, Multiple Regression, Machine Learning, PyTorch, Pandas, Numpy, SciPy, GCP, Google Cloud Compute, Azure, AWS, Lambda functions, Cloud functions, SAAS, Microservices, Anomoly Detection}
 	\twentyitemshort
 	{General}
 	{Program evaluation, technical liaison, presentation and public speaking, business intelligence, requirements gathering, data visualization, data wrangling, project management, Kanban, Jira, DevOps.}
