update with ag stuffs

--- a/res/HorvathResumeAg.tex
+++ b/res/HorvathResumeAg.tex
@@ -17,7 +17,7 @@
 \cvmail{www.michaelhorvathdataguy.com}%e-mail
 
 
-\aboutme{Originally from Kansas, Michael has lived in eight states and three countries. Michael enjoys climbing, running, playing guitar and anything that gets him outside. He's been writing software for about seven years now, but he's been exploring since the day he could walk -- perhaps even earlier.
+\aboutme{Originally from Kansas, Michael has lived in eight states and three countries. Michael enjoys climbing, running, playing guitar and anything that gets him outside. He's been writing software for about eight years now, but he's been exploring since the day he could walk -- perhaps even earlier.
 
 	} %About me
 
@@ -29,8 +29,8 @@
 {Cloud Services (GCP, AWS, Azure) /4},
 {SQL/5},
 {Design-and-Architecture/5.0}, 
-{Figuring-it-out/100},
 {CSS-Javascript-HTML/0},
+{Figuring-it-out/100},
 {0-to-1 Product Development/5.0}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
